--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -74,7 +74,7 @@
                 android:src="@drawable/arrow"
                 android:layout_marginStart="307dp"
                 android:layout_marginTop="63dp"
-                app:tint="@color/Primary_Dark"
+                app:tint="@color/white"
                 tools:ignore="ContentDescription" />
 
             <ImageView
