--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -2,30 +2,46 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:id="@+id/layout_header"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginHorizontal="30dp">
+    android:id="@+id/layout_header"
+    android:layout_marginHorizontal="30dp"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Icono del menú (hamburguesa) -->
-    <ImageView
-        android:id="@+id/rayas"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/baseline_menu_24"
+    <!-- Contenedor del icono del menú (hamburguesa) -->
+    <FrameLayout
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription" />
+        android:layout_marginTop="30dp">
 
-    <!-- Icono de notificación -->
-    <ImageView
-        android:id="@+id/notificacion"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@drawable/notification_icon"
-        app:layout_constraintBottom_toBottomOf="@id/rayas"
+        <!-- Icono del menú (hamburguesa) -->
+        <ImageView
+            android:id="@+id/rayas"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:src="@drawable/baseline_menu_24"
+            tools:ignore="ContentDescription" />
+    </FrameLayout>
+
+    <!-- Contenedor del icono de notificación -->
+    <FrameLayout
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/black"
-        tools:ignore="ContentDescription" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="30dp">
+
+        <!-- Icono de notificación -->
+        <ImageView
+            android:id="@+id/notificacion"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:src="@drawable/notification_icon"
+            app:tint="@color/black"
+            tools:ignore="ContentDescription" />
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
