I have implemented the data base in the register part and added firebase

--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -94,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="--"
-                    android:textColorHint="@color/Secondary_Darker"
+                    android:textColorHint="@color/black"
                     android:textSize="50sp"
                     android:fontFamily="@font/montserrat_regular"
                     app:layout_constraintTop_toTopOf="@id/pulse"
@@ -135,7 +135,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="--%"
-                    android:textColorHint="@color/Secondary_Darker"
+                    android:textColorHint="@color/black"
                     android:textSize="50sp"
                     android:fontFamily="@font/montserrat_regular"
                     app:layout_constraintTop_toTopOf="@id/oxigen"
