--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -128,6 +128,43 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp" />
 
+    <EditText
+        android:id="@+id/address_input"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:hint="Direccion"
+        android:importantForAutofill="no"
+        android:textColor="#9D9D9D"
+        android:textColorHint="#9D9D9D"
+        android:textSize="20sp"
+        android:padding="6dp"
+        android:elevation="6dp"
+        android:fontFamily="@font/montserrat"
+        android:background="@drawable/shadow"
+        app:layout_constraintTop_toBottomOf="@id/password_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
+
+    <!-- New EditText for "Parentesco" -->
+    <EditText
+        android:id="@+id/relationship_input"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:hint="Parentesco"
+        android:importantForAutofill="no"
+        android:textColor="#9D9D9D"
+        android:textColorHint="#9D9D9D"
+        android:textSize="20sp"
+        android:padding="6dp"
+        android:elevation="6dp"
+        android:fontFamily="@font/montserrat"
+        android:background="@drawable/shadow"
+        app:layout_constraintTop_toBottomOf="@id/address_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
+
     <Button
         android:id="@+id/register_btn"
         android:layout_width="200dp"
@@ -137,7 +174,7 @@
         android:textSize="18sp"
         android:background="@drawable/rounded_button"
         android:fontFamily="@font/montserrat_bold"
-        app:layout_constraintTop_toBottomOf="@id/password_input"
+        app:layout_constraintTop_toBottomOf="@id/relationship_input"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp" />
