--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,11 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:gravity="top"
     android:padding="16dp"
     android:background="@color/verdoso2"
     android:id="@+id/Nav_Header"
+    tools:context=".NavHeader"
     android:layout_height="120dp">
 
     <ImageView
