--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,7 @@
         android:hint="@string/email"
         android:importantForAutofill="no"
         android:textColorHint="@color/Gray"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:padding="6dp"
         android:layout_marginTop="90dp"
@@ -80,9 +81,9 @@
         android:layout_height="48dp"
         android:hint="@string/password"
         android:importantForAutofill="no"
-        android:textColor="@color/Gray"
-        android:layout_marginTop="24dp"
         android:textColorHint="@color/Gray"
+        android:textColor="@color/black"
+        android:layout_marginTop="24dp"
         android:textSize="20sp"
         android:padding="6dp"
         android:fontFamily="@font/montserrat"
@@ -116,7 +117,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/montserrat_regular"
         android:textSize="16sp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="22dp"
         app:layout_constraintTop_toBottomOf="@id/password_input"
         app:layout_constraintEnd_toEndOf="parent" />
 
