i fixed the splash, the RegisterPatient is working, it needs more adjustments also que menu obtaints the data effectivly but 1 screen.

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -60,8 +60,8 @@
         android:layout_height="48dp"
         android:hint="@string/name"
         android:importantForAutofill="no"
-        android:textColor="#9D9D9D"
-        android:textColorHint="#9D9D9D"
+        android:textColor="@color/black"
+        android:textColorHint="@color/Gray"
         android:textSize="20sp"
         android:padding="6dp"
         android:elevation="6dp"
@@ -79,8 +79,8 @@
         android:layout_height="48dp"
         android:hint="@string/last_name"
         android:importantForAutofill="no"
-        android:textColor="#9D9D9D"
-        android:textColorHint="#9D9D9D"
+        android:textColor="@color/black"
+        android:textColorHint="@color/Gray"
         android:textSize="20sp"
         android:padding="6dp"
         android:elevation="6dp"
@@ -97,8 +97,8 @@
         android:layout_height="48dp"
         android:hint="@string/email"
         android:importantForAutofill="no"
-        android:textColor="#9D9D9D"
-        android:textColorHint="#9D9D9D"
+        android:textColor="@color/black"
+        android:textColorHint="@color/Gray"
         android:textSize="20sp"
         android:padding="6dp"
         android:elevation="6dp"
@@ -115,8 +115,8 @@
         android:layout_height="48dp"
         android:hint="@string/password"
         android:importantForAutofill="no"
-        android:textColor="#9D9D9D"
-        android:textColorHint="#9D9D9D"
+        android:textColor="@color/black"
+        android:textColorHint="@color/Gray"
         android:textSize="20sp"
         android:padding="6dp"
         android:elevation="6dp"
@@ -134,8 +134,8 @@
         android:layout_height="48dp"
         android:hint="Direccion"
         android:importantForAutofill="no"
-        android:textColor="#9D9D9D"
-        android:textColorHint="#9D9D9D"
+        android:textColor="@color/black"
+        android:textColorHint="@color/Gray"
         android:textSize="20sp"
         android:padding="6dp"
         android:elevation="6dp"
@@ -153,8 +153,8 @@
         android:layout_height="48dp"
         android:hint="Parentesco"
         android:importantForAutofill="no"
-        android:textColor="#9D9D9D"
-        android:textColorHint="#9D9D9D"
+        android:textColor="@color/black"
+        android:textColorHint="@color/Gray"
         android:textSize="20sp"
         android:padding="6dp"
         android:elevation="6dp"
