--- a/app/src/main/res/layout/activity_register_patient.xml
+++ b/app/src/main/res/layout/activity_register_patient.xml
@@ -24,7 +24,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
         />
 
     <TextView
@@ -117,7 +116,6 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginHorizontal="60dp"
         app:layout_constraintTop_toBottomOf="@id/textView4"
-
         />
 
     <Spinner
@@ -159,15 +157,10 @@
         android:text="Registrar"
         android:textSize="17sp"
         android:fontFamily="@font/montserrat_bold"
-        android:textColor="@color/Secondary_Light"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView5"
         />
-
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
