--- a/app/src/main/res/layout/patients_view.xml
+++ b/app/src/main/res/layout/patients_view.xml
@@ -7,7 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-
     tools:context=".PatientsView">
 
     <!-- Navigation view for the menu -->
@@ -36,11 +35,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- First CardView for a patient -->
+        <!-- LinearLayout to hold the dynamic CardViews -->
+        <LinearLayout
+            android:id="@+id/cardContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@id/patients"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <!-- This is where the CardViews will be added dynamically -->
+
+        </LinearLayout>
+
+        <!-- First CardView for a patient (this is an example and can be replicated) -->
         <androidx.cardview.widget.CardView
             android:id="@+id/cardPatients"
             android:layout_width="350dp"
-            android:layout_height="150dp"
+            android:layout_height="170dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="30dp"
@@ -77,6 +92,7 @@
                         android:src="@drawable/battery_svg"
                         app:tint="@color/Red" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -84,25 +100,25 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/textViewName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="16dp"
-                        android:text="@string/manuel"
+                        android:text="Nombre: "
                         android:textColor="@color/Primary_Dark"
                         android:textSize="18sp" />
 
                     <TextView
+                        android:id="@+id/textViewCondition"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="5dp"
-                        android:text="Diabetes"
+                        android:text="Condición: "
                         android:textColor="@color/Primary_Dark"
                         android:textSize="18sp" />
-
-
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -129,10 +145,10 @@
                             android:textSize="14sp"/>
                     </LinearLayout>
                 </LinearLayout>
-
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
+
 
         <ImageView
             android:layout_width="24dp"
