--- a/app/src/main/res/layout/weekly_stats.xml
+++ b/app/src/main/res/layout/weekly_stats.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -31,6 +30,13 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
+            android:id="@+id/rayas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_menu" />
+
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/switch_ic"
@@ -42,60 +48,22 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card"
-            android:background="@drawable/shadow"
-            app:cardBackgroundColor="@color/Primary_Light"
-            android:layout_width="350dp"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
             app:cardCornerRadius="15dp"
-            android:elevation="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_margin="16dp"
+            app:cardBackgroundColor="@color/Primary_Light"
+            android:elevation="10dp"
             app:layout_constraintTop_toBottomOf="@id/user_weekly_stats"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <!-- Contenedor para el gráfico -->
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/weekly_bar_chart"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-
-
-                <ImageView
-                    android:id="@+id/first_line"
-                    android:layout_width="wrap_content"
-                    android:layout_height="200dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginBottom="40dp"
-                    android:elevation="13dp"
-                    android:src="@drawable/primary_vertical_line"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <ImageView
-                    android:id="@+id/second_line"
-                    android:layout_width="wrap_content"
-                    android:layout_height="200dp"
-                    android:src="@drawable/secondary_vertical_line"
-                    android:elevation="13dp"
-                    android:layout_marginBottom="40dp"
-                    android:layout_marginStart="5dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/first_line" />
-
-                <TextView
-                    android:id="@+id/lunes"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="L"
-                    android:textSize="25dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="@id/first_line"
-                    app:layout_constraintEnd_toEndOf="@id/second_line"
-                    android:layout_marginBottom="8dp" />
-
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_height="match_parent"
+                android:layout_margin="16dp" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
@@ -110,13 +78,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <!-- Contenedor interno con ConstraintLayout -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="16dp">
 
-                <!-- Título -->
                 <TextView
                     android:id="@+id/card_title"
                     android:layout_width="wrap_content"
@@ -127,9 +93,8 @@
                     android:fontFamily="@font/montserrat_bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    app:layout_constraintEnd_toEndOf="parent" />
 
-                <!-- Descripción -->
                 <TextView
                     android:id="@+id/card_description"
                     android:layout_width="0dp"
@@ -142,14 +107,10 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent" />
-
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </androidx.cardview.widget.CardView>
-
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
