--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -60,6 +60,8 @@
         android:layout_height="48dp"
         android:hint="@string/name"
         android:importantForAutofill="no"
+        android:imeOptions="actionNext"
+        android:singleLine="true"
         android:textColor="@color/black"
         android:textColorHint="@color/Gray"
         android:textSize="20sp"
@@ -78,6 +80,8 @@
         android:layout_width="350dp"
         android:layout_height="48dp"
         android:hint="@string/last_name"
+        android:imeOptions="actionNext"
+        android:singleLine="true"
         android:importantForAutofill="no"
         android:textColor="@color/black"
         android:textColorHint="@color/Gray"
@@ -97,6 +101,8 @@
         android:layout_height="48dp"
         android:hint="@string/email"
         android:importantForAutofill="no"
+        android:imeOptions="actionNext"
+        android:singleLine="true"
         android:textColor="@color/black"
         android:textColorHint="@color/Gray"
         android:textSize="20sp"
@@ -117,6 +123,8 @@
         android:importantForAutofill="no"
         android:textColor="@color/black"
         android:textColorHint="@color/Gray"
+        android:imeOptions="actionNext"
+        android:singleLine="true"
         android:textSize="20sp"
         android:padding="6dp"
         android:elevation="6dp"
@@ -136,6 +144,8 @@
         android:importantForAutofill="no"
         android:textColor="@color/black"
         android:textColorHint="@color/Gray"
+        android:imeOptions="actionNext"
+        android:singleLine="true"
         android:textSize="20sp"
         android:padding="6dp"
         android:elevation="6dp"
@@ -155,6 +165,8 @@
         android:importantForAutofill="no"
         android:textColor="@color/black"
         android:textColorHint="@color/Gray"
+        android:imeOptions="actionDone"
+        android:singleLine="true"
         android:textSize="20sp"
         android:padding="6dp"
         android:elevation="6dp"
