--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -186,6 +186,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:layout_marginTop="20dp"
         app:menu="@menu/nav_menu"
         app:headerLayout="@layout/nav_header"
         android:background="@color/white"
