--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,6 @@
         android:text="SAM"
         android:layout_marginEnd="50dp"
         android:layout_marginTop="80dp"
-
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +63,8 @@
         android:importantForAutofill="no"
         android:textColorHint="@color/Gray"
         android:textColor="@color/black"
+        android:imeOptions="actionNext"
+        android:singleLine="true"
         android:textSize="20sp"
         android:padding="6dp"
         android:layout_marginTop="90dp"
@@ -83,6 +84,8 @@
         android:importantForAutofill="no"
         android:textColorHint="@color/Gray"
         android:textColor="@color/black"
+        android:imeOptions="actionDone"
+        android:singleLine="true"
         android:layout_marginTop="24dp"
         android:textSize="20sp"
         android:padding="6dp"
