--- a/app/src/main/res/layout/activity_register_patient.xml
+++ b/app/src/main/res/layout/activity_register_patient.xml
@@ -42,10 +42,13 @@
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/textView1"
+        android:imeOptions="actionNext"
         android:singleLine="true"
         android:maxLines="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/black"
+        android:textColorHint="@color/Gray"
         app:layout_constraintTop_toBottomOf="@id/texto2"
         android:layout_marginTop="30dp"
         android:layout_width="300dp"
@@ -58,11 +61,14 @@
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/textView2"
+        android:imeOptions="actionNext"
         android:singleLine="true"
         android:maxLines="1"
         app:layout_constraintStart_toStartOf="@id/textView1"
         app:layout_constraintEnd_toEndOf="@id/textView1"
         app:layout_constraintTop_toBottomOf="@id/textView1"
+        android:textColor="@color/black"
+        android:textColorHint="@color/Gray"
         android:layout_marginTop="15dp"
         android:layout_width="300dp"
         android:layout_height="48dp"
@@ -74,11 +80,14 @@
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/textView3"
+        android:imeOptions="actionNext"
         android:singleLine="true"
         android:maxLines="1"
         app:layout_constraintStart_toStartOf="@id/textView2"
         app:layout_constraintEnd_toEndOf="@id/textView2"
         app:layout_constraintTop_toBottomOf="@id/textView2"
+        android:textColor="@color/black"
+        android:textColorHint="@color/Gray"
         android:layout_marginTop="15dp"
         android:layout_width="300dp"
         android:layout_height="48dp"
@@ -90,11 +99,14 @@
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/textView4"
+        android:imeOptions="actionNext"
         android:singleLine="true"
         android:maxLines="1"
         app:layout_constraintStart_toStartOf="@id/textView3"
         app:layout_constraintEnd_toEndOf="@id/textView3"
         app:layout_constraintTop_toBottomOf="@id/textView3"
+        android:textColor="@color/black"
+        android:textColorHint="@color/Gray"
         android:layout_marginTop="15dp"
         android:layout_width="300dp"
         android:layout_height="48dp"
@@ -104,42 +116,34 @@
         android:background="@drawable/rounded_edittext"
         />
 
-    <TextView
-        android:id="@+id/texto3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/montserrat"
-        android:text="Condicion del paciente"
-        android:textColor="@color/GrayLow"
-        android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginHorizontal="60dp"
-        app:layout_constraintTop_toBottomOf="@id/textView4"
-        />
-
-    <Spinner
-        android:id="@+id/spinnerCondition"
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/textViewCondition"
         android:layout_width="300dp"
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
+        android:hint="Condición del paciente"
         android:fontFamily="@font/montserrat"
-        android:layout_marginHorizontal="60dp"
-        app:layout_constraintStart_toStartOf="@id/textView5"
-        app:layout_constraintEnd_toEndOf="@id/textView5"
-        app:layout_constraintTop_toBottomOf="@id/texto3"
-        android:spinnerMode="dropdown"
-        android:backgroundTint="@color/GrayLow"
-        />
+        android:background="@drawable/rounded_edittext"
+        android:imeOptions="actionNext"
+        android:singleLine="true"
+        android:maxLines="1"
+        android:textColor="@color/black"
+        android:textColorHint="@color/Gray"
+        android:elevation="7dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView4" />
+
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/textView5"
+        android:imeOptions="actionDone"
         android:singleLine="true"
         android:maxLines="1"
         app:layout_constraintStart_toStartOf="@id/textView1"
         app:layout_constraintEnd_toEndOf="@id/textView1"
-        app:layout_constraintTop_toBottomOf="@id/spinnerCondition"
-        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/textViewCondition"
+        android:layout_marginTop="20dp"
         android:layout_width="300dp"
         android:layout_height="48dp"
         android:elevation="7dp"
