--- a/app/src/main/res/layout/patients_view.xml
+++ b/app/src/main/res/layout/patients_view.xml
@@ -128,6 +128,7 @@
                         android:orientation="horizontal">
 
                         <Button
+                            android:id="@+id/buttonCheck"
                             android:layout_width="110dp"
                             android:layout_height="50dp"
                             android:fontFamily="@font/montserrat_bold"
@@ -136,6 +137,7 @@
                             android:textSize="15sp" />
 
                         <Button
+                            android:id="@+id/buttonDevice"
                             android:layout_width="110dp"
                             android:layout_height="50dp"
                             android:fontFamily="@font/montserrat_bold"
