--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    app:layout_constraintGuide_begin="400dp"
     tools:context=".HistoryActivity">
 
     <!-- Contenido principal -->
@@ -19,7 +20,7 @@
             layout="@layout/layout_header" />
 
         <!-- Primer CardView -->
-        <androidx.cardview.widget.CardView
+        <!--<androidx.cardview.widget.CardView
             android:id="@+id/card"
             android:layout_width="350dp"
             android:layout_height="130dp"
@@ -43,6 +44,7 @@
             app:layout_constraintTop_toTopOf="@id/card"
             app:layout_constraintBottom_toBottomOf="@id/card" />
 
+
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
@@ -57,9 +59,9 @@
             app:layout_constraintTop_toTopOf="@id/card"
             app:layout_constraintStart_toStartOf="@id/card"
             app:layout_constraintBottom_toBottomOf="@id/card" />
-
+            -->
         <!-- Segundo CardView -->
-        <androidx.cardview.widget.CardView
+        <!--<androidx.cardview.widget.CardView
             android:id="@+id/card2"
             android:layout_width="350dp"
             android:layout_height="130dp"
@@ -97,19 +99,21 @@
             app:layout_constraintTop_toTopOf="@id/card2"
             app:layout_constraintStart_toStartOf="@id/card2"
             app:layout_constraintBottom_toBottomOf="@id/card2" />
-
+        -->
         <!-- Tercer CardView -->
         <androidx.cardview.widget.CardView
             android:id="@+id/card3"
             android:layout_width="350dp"
             android:layout_height="130dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginBottom="350dp"
             android:background="@drawable/shadow"
             app:cardBackgroundColor="@color/Primary_Light"
             app:cardCornerRadius="20dp"
-            app:layout_constraintTop_toBottomOf="@id/card2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:ignore="MissingConstraints" />
 
         <ImageView
             android:id="@+id/location"
