--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -100,7 +100,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/weekly_analysis"
+                android:text="Localización"
                 android:textColor="@color/Secondary_Darker"
                 android:textSize="18sp"
                 android:fontFamily="@font/montserrat_semi_bold"
